backend-rust/tests/requests/snapshots/login_with_invalid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    401,
    "{\"message\":\"E-mail ou senha inválidos.\"}",
)
