backend-rust/tests/requests/snapshots/login_with_valid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"token\":\"TOKEN\",\"user\":{\"id\":1,\"email\":\"test@loco.com\",\"fullName\":\"loco\",\"role\":\"admin\"}}",
)
